Update some images

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	
-<!-- Mirrored from pavlyukpetr.com/projects/wedding-flowers/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2020 02:50:17 GMT -->
 <head>
 		<title>Flower - Wedding Template</title>
 		<meta charset=utf-8>
@@ -89,7 +88,7 @@
 		<div class="c-hero-banner c-hero-banner--main">
 			<div class="cover"></div>
 			<div class="c-hero-banner__section c-hero-banner__image">
-				<img class="lazyload" src="img/banner.jpg" alt="image">
+				<img class="lazyload" src="img/banner.png" alt="image">
 			</div>
 			<div class="mask">
 				<img src="img/mask.png" alt="">
@@ -444,6 +443,4 @@
 	<script src="js/vendor/lightbox.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
-
-<!-- Mirrored from pavlyukpetr.com/projects/wedding-flowers/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 26 Feb 2020 02:51:57 GMT -->
 </html>
