--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               </a>
             </li>
             <li class="nav-item ml-lg-4 d-lg-none">
-              <span class="nav-link">&copy; Joseph and Sophia 2018.</span>
+              <span class="nav-link">&copy; Lily and Taylor 2020.</span>
             </li>
           </ul>
         </div>
@@ -133,7 +133,7 @@
         <div class="love-story__flowers m-auto">
           <img src="img/story-flowers.png" alt="flowers" />
         </div>
-        <h1 class="title">Love story</h1>
+        <h1 class="title">Love Story</h1>
         <p class="m-auto">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -155,7 +155,7 @@
           <div class="d-inline-block">
             <h2 class="title--special">September 26th, 2020</h2>
             <h3 class="date-section__place">
-              The Rustbelt Market<br />
+              The Rust Belt Market<br />
               Ferndale, MI
             </h3>
           </div>
@@ -183,10 +183,9 @@
     <!-- Section Events -->
     <section id="events" class="events section text-center">
       <div class="container">
-        <h1 class="title">Wedding events</h1>
+        <h1 class="title">Wedding Events</h1>
         <p class="subtitle mx-auto">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Please see the below events for the wedding with their respective times and locations.
         </p>
         <div id="accordion">
           <div class="accordion__header d-flex justify-content-center">
@@ -236,17 +235,14 @@
                 <div class="col-md-6 text-left">
                   <h3 class="accordion__item-subheading">When and Where</h3>
                   <p class="d-flex align-items-center">
-                    <i class="fa fa-2x fa-map-marker align-middle pr-1"></i>W
-                    Hotel, 1423 Hobart St, Pittsburgh, PA, 15217
+                    <i class="fa fa-2x fa-map-marker align-middle pr-1"></i>The Rust Belt Market, 22801 Woodward Ave, Ferndale, MI 48220
                   </p>
                   <p class="d-flex align-items-center">
-                    <i class="fa fa-2x fa-clock-o align-middle pr-1"></i>09:00 -
-                    10:30, Sep 15, 2018
+                    <i class="fa fa-2x fa-clock-o align-middle pr-1"></i>7:00pm -
+                    7:15pm, Sep 26, 2020
                   </p>
                   <p class="font-weight-bold">Keep it classy</p>
-                  <div class="btn btn-outline-dark rounded-0 px-2 py-1">
-                    View on map
-                  </div>
+									<a class="btn btn-outline-dark rounded-0 px-2 py-1" href="https://g.page/TheRustBeltMarket?share">View on map</a>
                 </div>
               </div>
             </div>
@@ -263,17 +259,14 @@
                 <div class="col-md-6 text-left">
                   <h3 class="accordion__item-subheading">When and Where</h3>
                   <p class="d-flex align-items-center">
-                    <i class="fa fa-2x fa-map-marker align-middle pr-1"></i>W
-                    Hotel, 1423 Hobart St, Pittsburgh, PA, 15217
+                    <i class="fa fa-2x fa-map-marker align-middle pr-1"></i>The Rust Belt Market, 22801 Woodward Ave, Ferndale, MI 48220
                   </p>
                   <p class="d-flex align-items-center">
-                    <i class="fa fa-2x fa-clock-o align-middle pr-1"></i>17:00 -
-                    21:00, Sep 15, 2018
+                    <i class="fa fa-2x fa-clock-o align-middle pr-1"></i>7:15pm -
+                    8:30pm, Sep 26, 2020
                   </p>
                   <p class="font-weight-bold">Keep it classy</p>
-                  <div class="btn btn-outline-dark rounded-0 px-2 py-1">
-                    View on map
-                  </div>
+									<a class="btn btn-outline-dark rounded-0 px-2 py-1" href="https://g.page/TheRustBeltMarket?share">View on map</a>
                 </div>
               </div>
             </div>
@@ -290,17 +283,14 @@
                 <div class="col-md-6 text-left">
                   <h3 class="accordion__item-subheading">When and Where</h3>
                   <p class="d-flex align-items-center">
-                    <i class="fa fa-2x fa-map-marker align-middle pr-1"></i>W
-                    Hotel, 1423 Hobart St, Pittsburgh, PA, 15217
+                    <i class="fa fa-2x fa-map-marker align-middle pr-1"></i>The Rust Belt Market, 22801 Woodward Ave, Ferndale, MI 48220
                   </p>
                   <p class="d-flex align-items-center">
-                    <i class="fa fa-2x fa-clock-o align-middle pr-1"></i>21:00 -
-                    00:00, Sep 15, 2018
+                    <i class="fa fa-2x fa-clock-o align-middle pr-1"></i>8:30pm -
+                    11:00pm, Sep 26, 2020
                   </p>
-                  <p class="font-weight-bold">Keep it classy</p>
-                  <div class="btn btn-outline-dark rounded-0 px-2 py-1">
-                    View on map
-                  </div>
+									<p class="font-weight-bold">Keep it classy</p>
+									<a class="btn btn-outline-dark rounded-0 px-2 py-1" href="https://g.page/TheRustBeltMarket?share">View on map</a>
                 </div>
               </div>
             </div>
@@ -310,7 +300,8 @@
           <div class="row text-left">
             <div class="col-md-4 event__info-item">
               <h6 class="event__info-header font-weight-bold">Getting there</h6>
-              <p>You can get there using the car, bus or train.</p>
+							<p>The Rust Belt Market is located right on the corner of 9 mile and Woodward in downtown Ferndale. There is parking available behind the building.</p>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11773.790803361591!2d-83.1351962!3d42.460766!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x567cc4b159f5b439!2sThe%20Rust%20Belt%20Market!5e0!3m2!1sen!2sus!4v1583981706273!5m2!1sen!2sus" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
             <div class="col-md-4 event__info-item">
               <h6 class="event__info-header font-weight-bold">Where to stay</h6>
@@ -380,69 +371,85 @@
         </div>
       </div>
     </section>
-    <!-- Section Wishes -->
-    <section class="wishes section text-center">
+    <!-- People Section -->
+    <section class="people section text-center">
       <div class="container">
-        <h1 class="title">Wishes</h1>
-        <p class="subtitle m-auto">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt
-        </p>
-        <div class="wishes__slider">
-          <div class="slick slick-wishes mb-0">
-            <div class="slider__item">
-              <div class="wishes__person">
-                <img
-                  class="rounded-circle m-auto"
-                  src="img/person1.jpg"
-                  alt="slider"
-                />
-              </div>
-              <h4 class="wishes__title font-weight-bold">Alex Cooper</h4>
-              <p class="mx-auto">
-                "With warm congratulations to a very special pair. May you
-                always find in each other the love, laughter and happiness that
-                only partners in life share!"
-              </p>
+        <h1 class="title">Important People</h1>
+        <div class="row">
+					<div class="col col-lg-5 col-12 text-center">
+						<h4 class="margin-b-2">Bridemaids</h4>
+            <div class="people-img text-center ml-0">
+							<img
+							class=""
+							src="img/person1.jpg"
+							alt=""
+              />
+              <p>Kelly Warnos</p>
             </div>
-            <div class="slider__item">
-              <div class="wishes__person">
-                <img
-                  class="rounded-circle m-auto"
-                  src="img/person2.jpg"
-                  alt="slider"
-                />
-              </div>
-              <h4 class="wishes__title font-weight-bold">Mary Alen</h4>
-              <p class="mx-auto">
-                "True love stories never end! Happy wedding day and may there be
-                many more chapters in the wonderful story of your love for one
-                another."
-              </p>
+            <div class="people-img text-center">
+							<img
+							class=""
+							src="img/person1.jpg"
+							alt=""
+              />
+              <p>Holly Ringelberg</p>
             </div>
-            <div class="slider__item">
-              <div class="wishes__person">
-                <img
-                  class="rounded-circle m-auto"
-                  src="img/person3.jpg"
-                  alt="slider"
-                />
-              </div>
-              <h4 class="wishes__title font-weight-bold">John Colen</h4>
-              <p class="mx-auto">
-                "A wedding wish for two special person: love is best when shared
-                by two. You know that together you are stronger, together you
-                are one. Have a wonderful married life!"
-              </p>
+            <div class="people-img text-center">
+							<img
+							class=""
+							src="img/person1.jpg"
+							alt=""
+              />
+              <p>Kaleigh Respecki</p>
+            </div>
+          </div>
+          <div class="col col-lg-2 col-12 text-center">
+						<h4 class="margin-b-2">Officiant</h4>
+            <div class="people-img text-center ml-0">
+							<img
+							class=""
+							src="img/erin.png"
+							alt=""
+              />
+              <p>Erin DeFrancesco</p>
+            </div>
+          </div>
+          <div class="col col-lg-5 col-12 text-center">
+						<h4 class="margin-b-2">Groomsmen</h4>
+            <div class="people-img text-center ml-0">
+							<img
+							class=""
+							src="img/person2.jpg"
+							alt=""
+              />
+              <p>Alex Butler</p>
+            </div>
+            <div class="people-img text-center">
+							<img
+							class=""
+							src="img/person2.jpg"
+							alt=""
+              />
+              <p>Alex Woodle</p>
+            </div>
+            <div class="people-img text-center">
+              <img
+							class=""
+							src="img/person2.jpg"
+							alt=""
+              />
+              <p>Josh Wargo</p>
             </div>
           </div>
         </div>
       </div>
+		</div>
     </section>
+    <!-- People Section End -->
     <!-- Section Gift -->
     <section class="gifts section section--blue text-center">
-      <div class="container">
-        <h1 class="title">Gift registry</h1>
+			<div class="container">
+				<h1 class="title">Gift Registry</h1>
         <a
           class="zola-registry-embed"
           href="https://www.zola.com/registry/taylorandlily2020"
@@ -456,7 +463,7 @@
       <div class="container">
         <div class="row">
           <div class="d-none d-md-block col-sm-12 col-md-4">
-            <img src="img/rsvp-flower.png" class="parallax" alt="flower" />
+            <img src="img/flowers/rsvp-flower1.png" class="parallax" alt="flower" />
           </div>
           <div class="col-sm-12 col-md-8 align-self-center">
             <h2 class="title">RSVP</h2>
@@ -585,9 +592,6 @@
             </div>
           </div>
         </div>
-        <a href="https://www.freepik.com/free-photos-vectors/wedding"
-          >Wedding vector created by azerbaijan_stockers - www.freepik.com</a
-        >
         <div class="copyright text-center">
           &copy; Copyright 2019. All right Reserved.
         </div>
