removal of a bunch of unneeded stuff and minified css and js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="css/vendor/slick-theme.css" />
     <link rel="stylesheet" type="text/css" href="css/vendor/lightbox.min.css" />
     <!-- Main style -->
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.min.css" />
     <!-- Fonts -->
     <link
       rel="stylesheet"
@@ -31,11 +31,6 @@
       type="image/png"
       href="http://pavlyukpetr.com/favicon.ico"
     />
-    <!--[if lt IE 9]>
-      <script src="js/vendor/html5shiv.min.js"></script>
-      <script src="js/vendor/respond.min.js"></script>
-    <![endif]-->
-  </head>
   <body
     data-spy="scroll"
     data-target="#navbarSupportedContent"
@@ -76,24 +71,7 @@
               <a class="nav-link active page-scroll" href="#top">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link page-scroll" href="#events">Events</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link page-scroll" href="#gallery">Gallery</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link page-scroll" href="#rsvp">RSVP</a>
-            </li>
-            <li class="nav-item d-flex ml-lg-4">
-              <a class="nav-link nav-link_social" href="#">
-                <i class="fa fa-2x fa-facebook-square"></i>
-              </a>
-              <a class="nav-link nav-link_social" href="#">
-                <i class="fa fa-2x fa-twitter-square"></i>
-              </a>
-              <a class="nav-link nav-link_social" href="#">
-                <i class="fa fa-2x fa-google-plus-square"></i>
-              </a>
             </li>
             <li class="nav-item ml-lg-4 d-lg-none">
               <span class="nav-link">&copy; Lily and Taylor 2020.</span>
@@ -124,16 +102,11 @@
     </div>
     <!-- Section Love story -->
     <section class="love-story section position-relative text-center">
-      <!-- <div
-        class="d-none d-sm-block love-story__flower-parallax position-absolute parallax"
-      >
-        <img src="img/ls-flower-prlx.png" alt="flower" />
-      </div> -->
       <div class="container">
         <div class="love-story__flowers m-auto">
           <img src="img/story-flowers.png" alt="flowers" />
         </div>
-        <h1 class="title">Love Story</h1>
+        <h1 class="title">Coming Soon</h1>
         <p class="m-auto">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -149,7 +122,6 @@
     <section class="date-section section section--blue countdown text-center">
       <div class="container">
         <div class="date-section__flowers m-auto">
-          <!-- <img src="img/date-flowers.png" alt="flowers" /> -->
         </div>
         <div class="date-section__block">
           <div class="d-inline-block">
@@ -180,272 +152,6 @@
         </div>
       </div>
     </section>
-    <!-- Section Events -->
-    <section id="events" class="events section text-center">
-      <div class="container">
-        <h1 class="title">Wedding Events</h1>
-        <p class="subtitle mx-auto">
-          Please see the below events for the wedding with their respective times and locations.
-        </p>
-        <div id="accordion">
-          <div class="accordion__header d-flex justify-content-center">
-            <button
-              class="btn btn-link"
-              data-toggle="collapse"
-              data-target="#collapseOne"
-              aria-expanded="true"
-              aria-controls="collapseOne"
-            >
-              Ceremony
-            </button>
-            <button
-              class="btn btn-link collapsed"
-              data-toggle="collapse"
-              data-target="#collapseTwo"
-              aria-expanded="false"
-              aria-controls="collapseTwo"
-            >
-              Dinner
-            </button>
-            <button
-              class="btn btn-link collapsed"
-              data-toggle="collapse"
-              data-target="#collapseThree"
-              aria-expanded="false"
-              aria-controls="collapseThree"
-            >
-              Party
-            </button>
-          </div>
-          <div class="accordion__body">
-            <div
-              id="collapseOne"
-              class="collapse show"
-              data-parent="#accordion"
-            >
-              <div class="row">
-                <h2 class="accordion__item-heading">Ceremony</h2>
-                <div class="col-md-6">
-                  <img
-                    class="accordion__item-img"
-                    src="img/ceremony.png"
-                    alt="ceremony"
-                  />
-                </div>
-                <div class="col-md-6 text-left">
-                  <h3 class="accordion__item-subheading">When and Where</h3>
-                  <p class="d-flex align-items-center">
-                    <i class="fa fa-2x fa-map-marker align-middle pr-1"></i>The Rust Belt Market, 22801 Woodward Ave, Ferndale, MI 48220
-                  </p>
-                  <p class="d-flex align-items-center">
-                    <i class="fa fa-2x fa-clock-o align-middle pr-1"></i>7:00pm -
-                    7:15pm, Sep 26, 2020
-                  </p>
-                  <p class="font-weight-bold">Keep it classy</p>
-									<a class="btn btn-outline-dark rounded-0 px-2 py-1" href="https://g.page/TheRustBeltMarket?share">View on map</a>
-                </div>
-              </div>
-            </div>
-            <div id="collapseTwo" class="collapse" data-parent="#accordion">
-              <div class="row">
-                <h2 class="accordion__item-heading">Dinner</h2>
-                <div class="col-md-6">
-                  <img
-                    class="accordion__item-img"
-                    src="img/dinner.jpg"
-                    alt="ceremony"
-                  />
-                </div>
-                <div class="col-md-6 text-left">
-                  <h3 class="accordion__item-subheading">When and Where</h3>
-                  <p class="d-flex align-items-center">
-                    <i class="fa fa-2x fa-map-marker align-middle pr-1"></i>The Rust Belt Market, 22801 Woodward Ave, Ferndale, MI 48220
-                  </p>
-                  <p class="d-flex align-items-center">
-                    <i class="fa fa-2x fa-clock-o align-middle pr-1"></i>7:15pm -
-                    8:30pm, Sep 26, 2020
-                  </p>
-                  <p class="font-weight-bold">Keep it classy</p>
-									<a class="btn btn-outline-dark rounded-0 px-2 py-1" href="https://g.page/TheRustBeltMarket?share">View on map</a>
-                </div>
-              </div>
-            </div>
-            <div id="collapseThree" class="collapse" data-parent="#accordion">
-              <div class="row">
-                <h2 class="accordion__item-heading">Party</h2>
-                <div class="col-md-6">
-                  <img
-                    class="accordion__item-img"
-                    src="img/party.jpg"
-                    alt="ceremony"
-                  />
-                </div>
-                <div class="col-md-6 text-left">
-                  <h3 class="accordion__item-subheading">When and Where</h3>
-                  <p class="d-flex align-items-center">
-                    <i class="fa fa-2x fa-map-marker align-middle pr-1"></i>The Rust Belt Market, 22801 Woodward Ave, Ferndale, MI 48220
-                  </p>
-                  <p class="d-flex align-items-center">
-                    <i class="fa fa-2x fa-clock-o align-middle pr-1"></i>8:30pm -
-                    11:00pm, Sep 26, 2020
-                  </p>
-									<p class="font-weight-bold">Keep it classy</p>
-									<a class="btn btn-outline-dark rounded-0 px-2 py-1" href="https://g.page/TheRustBeltMarket?share">View on map</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="events__info">
-          <div class="row text-left">
-            <div class="col-md-4 event__info-item">
-              <h6 class="event__info-header font-weight-bold">Getting there</h6>
-							<p>The Rust Belt Market is located right on the corner of 9 mile and Woodward in downtown Ferndale. There is parking available behind the building.</p>
-							<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11773.790803361591!2d-83.1351962!3d42.460766!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x567cc4b159f5b439!2sThe%20Rust%20Belt%20Market!5e0!3m2!1sen!2sus!4v1583981706273!5m2!1sen!2sus" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-            </div>
-            <div class="col-md-4 event__info-item">
-              <h6 class="event__info-header font-weight-bold">Where to stay</h6>
-              <p>Hotel, Motel</p>
-              <p>
-                There are many options to choose around. You can book
-                accommodation online, either at hotel's own web site or at web
-                site of an agency.
-              </p>
-            </div>
-            <div class="col-md-4 event__info-item">
-              <h6 class="event__info-header font-weight-bold">Activities</h6>
-              <p>Here are a few of our favorite local spots.</p>
-              <ul>
-                <li>Climbing Park</li>
-                <li>Bowling</li>
-                <li>Golf</li>
-                <li>Spa center</li>
-                <li>Biking</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Section Gallery -->
-    <section id="gallery" class="gallery section text-center">
-      <div
-        class="d-none d-lg-block gallery__flower-prlx-l position-absolute parallax"
-      >
-        <img src="img/gallery-prlx-l.png" alt="flower" />
-      </div>
-      <div
-        class="d-none d-lg-block gallery__flower-prlx-r position-absolute parallax"
-      >
-        <img src="img/gallery-prlx-r.png" alt="flower" />
-      </div>
-      <div class="container position-relative">
-        <h1 class="title">Gallery</h1>
-        <p class="subtitle mx-auto">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
-        <div class="gallery__slider">
-          <div class="slick-gallery slick mb-0">
-            <div class="slider__item">
-              <img src="img/slider/gallery-1.jpg" alt="slider" />
-            </div>
-            <div class="slider__item">
-              <img src="img/slider/gallery-2.jpg" alt="slider" />
-            </div>
-            <div class="slider__item">
-              <img src="img/slider/gallery-3.jpg" alt="slider" />
-            </div>
-            <div class="slider__item">
-              <img src="img/slider/gallery-4.jpg" alt="slider" />
-            </div>
-            <div class="slider__item">
-              <img src="img/slider/gallery-5.jpg" alt="slider" />
-            </div>
-          </div>
-          <div class="gallery__slider-num d-none d-lg-flex">
-            <div class="gallery__slider-current pr-1"></div>
-            <div class="pr-1">from</div>
-            <div class="gallery__slider-all"></div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- People Section -->
-    <section class="people section text-center">
-      <div class="container">
-        <h1 class="title">Important People</h1>
-        <div class="row">
-					<div class="col col-lg-5 col-12 text-center">
-						<h4 class="margin-b-2">Bridemaids</h4>
-            <div class="people-img text-center ml-0">
-							<img
-							class=""
-							src="img/person1.jpg"
-							alt=""
-              />
-              <p>Kelly Warnos</p>
-            </div>
-            <div class="people-img text-center">
-							<img
-							class=""
-							src="img/person1.jpg"
-							alt=""
-              />
-              <p>Holly Ringelberg</p>
-            </div>
-            <div class="people-img text-center">
-							<img
-							class=""
-							src="img/person1.jpg"
-							alt=""
-              />
-              <p>Kaleigh Respecki</p>
-            </div>
-          </div>
-          <div class="col col-lg-2 col-12 text-center">
-						<h4 class="margin-b-2">Officiant</h4>
-            <div class="people-img text-center ml-0">
-							<img
-							class=""
-							src="img/erin.png"
-							alt=""
-              />
-              <p>Erin DeFrancesco</p>
-            </div>
-          </div>
-          <div class="col col-lg-5 col-12 text-center">
-						<h4 class="margin-b-2">Groomsmen</h4>
-            <div class="people-img text-center ml-0">
-							<img
-							class=""
-							src="img/person2.jpg"
-							alt=""
-              />
-              <p>Alex Butler</p>
-            </div>
-            <div class="people-img text-center">
-							<img
-							class=""
-							src="img/person2.jpg"
-							alt=""
-              />
-              <p>Alex Woodle</p>
-            </div>
-            <div class="people-img text-center">
-              <img
-							class=""
-							src="img/person2.jpg"
-							alt=""
-              />
-              <p>Josh Wargo</p>
-            </div>
-          </div>
-        </div>
-      </div>
-		</div>
-    </section>
-    <!-- People Section End -->
     <!-- Section Gift -->
     <section class="gifts section section--blue text-center">
 			<div class="container">
@@ -458,139 +164,12 @@
         >
       </div>
     </section>
-    <!-- RSVP -->
-    <section id="rsvp" class="rsvp section">
-      <div class="container">
-        <div class="row">
-          <div class="d-none d-md-block col-sm-12 col-md-4">
-            <img src="img/flowers/rsvp-flower1.png" class="parallax" alt="flower" />
-          </div>
-          <div class="col-sm-12 col-md-8 align-self-center">
-            <h2 class="title">RSVP</h2>
-            <h6 class="text-uppercase font-weight-bold mb-0">
-              Will you attend?
-            </h6>
-            <form
-              id="rsvp-form"
-              action="http://pavlyukpetr.com/projects/wedding-flowers/form.php"
-              method="post"
-            >
-              <div class="row">
-                <div class="col-md-8 mb-3 m-md-0">
-                  <div class="form-group">
-                    <label class="control-label" for="inputName"
-                      >Your name</label
-                    >
-                    <input
-                      type="text"
-                      class="form-control"
-                      id="inputName"
-                      required
-                    />
-                  </div>
-                  <div class="form-group">
-                    <label class="control-label" for="inputNumber"
-                      >Contact number</label
-                    >
-                    <input
-                      type="tel"
-                      class="form-control"
-                      id="inputNumber"
-                      required
-                    />
-                  </div>
-                </div>
-                <div class="col-md-4 align-self-end">
-                  <button
-                    type="submit"
-                    class="btn btn-outline-dark rounded-0 px-3 py-1 font-weight-bold"
-                  >
-                    Send
-                  </button>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <div class="success-msg"></div>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
     <!-- Footer -->
     <footer class="section">
       <div class="container text-white position-relative">
         <div class="footer__title">
           <div class="text-center">Save the date</div>
-          <div class="text-center">Joseph and Sophia</div>
-        </div>
-        <div class="row pb-4">
-          <div class="col-md-6 text-justify">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-              sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-          </div>
-          <div class="col-md-6 text-justify">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-              sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-          </div>
-        </div>
-        <div class="row pb-4">
-          <div class="col-md-12 border p-1 mx-1">
-            <ul class="d-sm-flex justify-content-center">
-              <li class="nav-item">
-                <a class="nav-link page-scroll" href="#">Events</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link page-scroll" href="#cases">Gallery</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link page-scroll" href="#donations"
-                  >Testimanials</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link page-scroll" href="#news">Contacts</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-12 border border-bottom-0 border-top-0 mx-1">
-            <div class="row">
-              <div class="col-md-4 text-center border-right border-bottom px-0">
-                <div class="pt-1 pb-1">
-                  <i class="fa fa-phone fa-3x"></i>
-                </div>
-                <div class="pb-1">+38090-111-2233</div>
-              </div>
-              <div class="col-md-4 text-center border-right border-bottom px-0">
-                <div class="pt-1 pb-1">
-                  <i class="fa fa-map-marker fa-3x"></i>
-                </div>
-                <div class="pb-1">New York, USA</div>
-              </div>
-              <div class="col-md-4 text-center border-bottom px-0">
-                <div class="pt-1 pb-1">
-                  <i class="fa fa-envelope-o fa-3x"></i>
-                </div>
-                <div class="pb-1">email@contact.com</div>
-              </div>
-            </div>
-          </div>
+          <div class="text-center">Taylor and Lily</div>
         </div>
         <div class="copyright text-center">
           &copy; Copyright 2019. All right Reserved.
@@ -618,6 +197,6 @@
     <script src="js/vendor/circletype.min.js"></script>
     <script src="js/vendor/masonry.pkgd.min.js"></script>
     <script src="js/vendor/lightbox.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
