--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Flower - Wedding Template</title>
+    <title>Lily and Taylor 2020</title>
     <meta charset="utf-8" />
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -71,7 +71,7 @@
               <a class="nav-link active page-scroll" href="#top">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link page-scroll" href="#rsvp">RSVP</a>
+              <a class="nav-link page-scroll" href="#registry">Registry</a>
             </li>
             <li class="nav-item ml-lg-4 d-lg-none">
               <span class="nav-link">&copy; Lily and Taylor 2020.</span>
@@ -108,13 +108,7 @@
         </div>
         <h1 class="title">Coming Soon</h1>
         <p class="m-auto">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          Stay tuned for more information on the wedding.
         </p>
       </div>
     </section>
@@ -153,7 +147,7 @@
       </div>
     </section>
     <!-- Section Gift -->
-    <section class="gifts section section--blue text-center">
+    <section id="registry" class="gifts section text-center">
 			<div class="container">
 				<h1 class="title">Gift Registry</h1>
         <a
