live 3/25 cherry-pick

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Flower - Wedding Template</title>
+    <title>Lily and Taylor 2020</title>
     <meta charset="utf-8" />
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -82,6 +82,9 @@
               <a class="nav-link page-scroll" href="#gallery">Gallery</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link page-scroll" href="#registry">Registry</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link page-scroll" href="#rsvp">RSVP</a>
             </li>
             <li class="nav-item d-flex ml-lg-4">
@@ -135,13 +138,7 @@
         </div>
         <h1 class="title">Love Story</h1>
         <p class="m-auto">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          Stay tuned for more information on the wedding.
         </p>
       </div>
     </section>
@@ -447,7 +444,7 @@
     </section>
     <!-- People Section End -->
     <!-- Section Gift -->
-    <section class="gifts section section--blue text-center">
+    <section id="registry" class="gifts section text-center">
 			<div class="container">
 				<h1 class="title">Gift Registry</h1>
         <a
