--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
             <li class="nav-item">
               <a class="nav-link page-scroll" href="#rsvp">RSVP</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link page-scroll" href="#poll">Poll</a>
+            </li>
             <li class="nav-item d-flex ml-lg-4">
               <a class="nav-link nav-link_social" href="#">
                 <i class="fa fa-2x fa-facebook-square"></i>
@@ -514,6 +517,12 @@
             </form>
           </div>
         </div>
+      </div>
+    </section>
+      <!-- Section Poll -->
+    <section id="poll" class="section text-center section--blue">
+			<div class="container">
+				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf2lESm1OcIHE-oe6gAIoOJxBDEe8Ibqj_h_Xro3yiU55EYmQ/viewform?embedded=true" width="100%" height="680px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
     </section>
     <!-- Footer -->
