--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
             <li class="nav-item">
               <a class="nav-link page-scroll" href="#registry">Registry</a>
             </li>
-            <li class="nav-item ml-lg-4 d-lg-none">
+            </li>
+            <li class="nav-item">
+              <a class="nav-link page-scroll" href="#poll">Poll</a>
+            </li>
+              <li class="nav-item ml-lg-4 d-lg-none">
               <span class="nav-link">&copy; Lily and Taylor 2020.</span>
             </li>
           </ul>
@@ -156,6 +160,12 @@
           data-registry-key="taylorandlily2020"
           >Our Zola Wedding Registry</a
         >
+      </div>
+    </section>
+    <!-- Section Poll -->
+    <section id="poll" class="section text-center section--blue">
+			<div class="container">
+				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf2lESm1OcIHE-oe6gAIoOJxBDEe8Ibqj_h_Xro3yiU55EYmQ/viewform?embedded=true" width="100%" height="680px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
     </section>
     <!-- Footer -->
