update coming soon message and change location

--- a/index.html
+++ b/index.html
@@ -110,9 +110,14 @@
         <div class="love-story__flowers m-auto">
           <img src="img/story-flowers.png" alt="flowers" />
         </div>
-        <h1 class="title">Coming Soon</h1>
+        <h1 class="title">Change the Date</h1>
         <p class="m-auto">
-          Stay tuned for more information on the wedding.
+          Out of concern for our loved ones, we have decided to postpone the celebration of our marriage until <b>April 24th, 2021</b>. Our marriage ceremony will still take place on September 26th, 2020 in the presence of our immediate family. We hope this message finds you well and we can’t wait to celebrate with all of you!
+          <br>
+          <br>
+          With much love,
+          <br>
+          Lily and Taylor
         </p>
       </div>
     </section>
@@ -125,8 +130,7 @@
           <div class="d-inline-block">
             <h2 class="title--special">September 26th, 2020</h2>
             <h3 class="date-section__place">
-              The Rust Belt Market<br />
-              Ferndale, MI
+              Clawson, MI
             </h3>
           </div>
         </div>
