--- a/index.html
+++ b/index.html
@@ -534,9 +534,9 @@
       <div class="container text-white position-relative">
         <div class="footer__title">
           <div class="text-center">Save the date</div>
-          <div class="text-center">Joseph and Sophia</div>
+          <div class="text-center">Lily and Taylor</div>
         </div>
-        <div class="row pb-4">
+        <!-- <div class="row pb-4">
           <div class="col-md-6 text-justify">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -601,9 +601,9 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="copyright text-center">
-          &copy; Copyright 2019. All right Reserved.
+          &copy; Copyright 2020. All Rights Reserved.
         </div>
       </div>
     </footer>
