--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="css/vendor/slick-theme.css" />
     <link rel="stylesheet" type="text/css" href="css/vendor/lightbox.min.css" />
     <!-- Main style -->
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.min.css" />
     <!-- Fonts -->
     <link
       rel="stylesheet"
@@ -153,10 +153,70 @@
     <!-- Section Date -->
     <section class="date-section section section--blue countdown text-center">
       <div class="container">
-        <div class="date-section__flowers m-auto">
-          <!-- <img src="img/date-flowers.png" alt="flowers" /> -->
+        <div class="row">
+          <div class="col-md-6">
+            <div class="date-section__block">
+              <div class="d-inline-block">
+                <h3>Til we tie the knot</h3>
+                <h2 class="title--special">September 26th, 2020</h2>
+                <h3 class="date-section__place">
+                  Clawson, MI
+                </h3>
+              </div>
+            </div>
+            <div id="timer1" class="timer d-flex justify-content-center">
+              <div class="timer-item">
+                <span class="days timer__digit"></span>
+                <div class="timer__text">days</div>
+              </div>
+              <div class="timer-item">
+                <span class="hours timer__digit"></span>
+                <div class="timer__text">hours</div>
+              </div>
+              <div class="timer-item">
+                <span class="minutes timer__digit"></span>
+                <div class="timer__text">minutes</div>
+              </div>
+              <div class="timer-item">
+                <span class="seconds timer__digit"></span>
+                <div class="timer__text">seconds</div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="date-section__block">
+              <div class="d-inline-block">
+                <h3>Til we party</h3>
+                <h2 class="title--special">April 24th, 2021</h2>
+                <h3 class="date-section__place">
+                  Clawson, MI
+                </h3>
+              </div>
+            </div>
+            <div id="timer2" class="timer d-flex justify-content-center">
+              <div class="timer-item">
+                <span class="days timer__digit"></span>
+                <div class="timer__text">days</div>
+              </div>
+              <div class="timer-item">
+                <span class="hours timer__digit"></span>
+                <div class="timer__text">hours</div>
+              </div>
+              <div class="timer-item">
+                <span class="minutes timer__digit"></span>
+                <div class="timer__text">minutes</div>
+              </div>
+              <div class="timer-item">
+                <span class="seconds timer__digit"></span>
+                <div class="timer__text">seconds</div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="date-section__block">
+        <!-- <div class="date-section__flowers m-auto">
+          <img src="img/date-flowers.png" alt="flowers" />
+        </div> -->
+        <!-- <div class="date-section__block">
           <div class="d-inline-block">
             <h2 class="title--special">September 26th, 2020</h2>
             <h3 class="date-section__place">
@@ -181,7 +241,7 @@
             <span class="seconds timer__digit"></span>
             <div class="timer__text">seconds</div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
     <!-- Section Events -->
@@ -628,6 +688,6 @@
     <script src="js/vendor/circletype.min.js"></script>
     <script src="js/vendor/masonry.pkgd.min.js"></script>
     <script src="js/vendor/lightbox.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
