--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <a class="nav-link page-scroll" href="#rsvp">RSVP</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link page-scroll" href="#poll">Poll</a>
+              <a class="nav-link page-scroll last" href="#poll">Poll</a>
             </li>
             <li class="nav-item d-flex ml-lg-4">
               <a class="nav-link nav-link_social" href="#">
