Remove last bullet from nav

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </li>
             </li>
             <li class="nav-item">
-              <a class="nav-link page-scroll" href="#poll">Poll</a>
+              <a class="nav-link page-scroll last" href="#poll">Poll</a>
             </li>
               <li class="nav-item ml-lg-4 d-lg-none">
               <span class="nav-link">&copy; Lily and Taylor 2020.</span>
