Finish new date

--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
     <section class="date-section section section--blue countdown text-center">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <div class="date-section__block">
               <div class="d-inline-block">
-                <h3>Til we tie the knot</h3>
+                <h3 class="date-section__label">Til we tie the knot</h3>
                 <h2 class="title--special">September 26th, 2020</h2>
                 <h3 class="date-section__place">
                   Clawson, MI
@@ -183,13 +183,13 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <div class="date-section__block">
               <div class="d-inline-block">
-                <h3>Til we party</h3>
+                <h3 class="date-section__label">Til we party</h3>
                 <h2 class="title--special">April 24th, 2021</h2>
                 <h3 class="date-section__place">
-                  Clawson, MI
+                  Ferndale, MI
                 </h3>
               </div>
             </div>
