Fix footer and add image

--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
         <div class="footer__title">
           <div class="text-center">Save the date</div>
           <div class="text-center">Taylor and Lily</div>
+        </div>
         <!-- <div class="row pb-4">
           <div class="col-md-6 text-justify">
             <p>
