--- a/index.html
+++ b/index.html
@@ -405,26 +405,35 @@
       </div>
       <div class="container position-relative">
         <h1 class="title">Gallery</h1>
-        <p class="subtitle mx-auto">
+        <!-- <p class="subtitle mx-auto">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
+        </p> -->
         <div class="gallery__slider">
           <div class="slick-gallery slick mb-0">
             <div class="slider__item">
-              <img src="img/slider/gallery-1.jpg" alt="slider" />
+              <img src="img/gallery/DSC_3679.jpg" alt="slider" />
             </div>
             <div class="slider__item">
-              <img src="img/slider/gallery-2.jpg" alt="slider" />
+              <img src="img/gallery/DSC_6298.jpg" alt="slider" />
             </div>
             <div class="slider__item">
-              <img src="img/slider/gallery-3.jpg" alt="slider" />
+              <img src="img/gallery/DSC_6230.jpg" alt="slider" />
             </div>
             <div class="slider__item">
-              <img src="img/slider/gallery-4.jpg" alt="slider" />
+              <img src="img/gallery/DSC_6571.jpg" alt="slider" />
             </div>
             <div class="slider__item">
-              <img src="img/slider/gallery-5.jpg" alt="slider" />
+              <img src="img/gallery/DSC_6595.jpg" alt="slider" />
+            </div>
+            <div class="slider__item">
+              <img src="img/gallery/DSC_6309.jpg" alt="slider" />
+            </div>
+            <div class="slider__item">
+              <img src="img/gallery/DSC_6413.jpg" alt="slider" />
+            </div>
+            <div class="slider__item">
+              <img src="img/gallery/DSC_6622.jpg" alt="slider" />
             </div>
           </div>
           <div class="gallery__slider-num d-none d-lg-flex">
