--- a/index.html
+++ b/index.html
@@ -538,9 +538,9 @@
           <div class="d-none d-md-block col-sm-12 col-md-4">
             <img src="img/flowers/rsvp-flower1.png" class="parallax" alt="flower" />
           </div>
-          <div class="col-sm-12 col-md-8 align-self-center">
-            <h2 class="title">RSVP</h2>
-            <h6 class="text-uppercase font-weight-bold mb-0">
+          <div class="col-sm-12 col-md-8 align-self-center embed-responsive embed-responsive-4by3">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeP8XvE2dRiiTkfj_mmz0FIOCGAUGN2Lk7cBksUzKd77DNWvQ/viewform?embedded=true">Loading…</iframe>            
+            <!-- <h6 class="text-uppercase font-weight-bold mb-0">
               Will you attend?
             </h6>
             <form
@@ -587,7 +587,7 @@
                   <div class="success-msg"></div>
                 </div>
               </div>
-            </form>
+            </form> -->
           </div>
         </div>
       </div>
