--- a/index.html
+++ b/index.html
@@ -76,19 +76,13 @@
               <a class="nav-link active page-scroll" href="#top">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link page-scroll" href="#events">Events</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link page-scroll" href="#gallery">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link page-scroll" href="#registry">Registry</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link page-scroll" href="#rsvp">RSVP</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link page-scroll last" href="#poll">Poll</a>
+              <a class="nav-link page-scroll last" href="#rsvp">RSVP</a>
             </li>
             <li class="nav-item ml-lg-4 d-lg-none">
               <span class="nav-link">&copy; Lily and Taylor 2020.</span>
@@ -286,81 +280,6 @@
         </div>
       </div>
     </section>
-    <!-- People Section -->
-    <section class="people section text-center">
-      <div class="container">
-        <h1 class="title">Important People</h1>
-        <div class="row">
-					<div class="col col-lg-5 col-12 text-center">
-						<h4 class="margin-b-2">Bridemaids</h4>
-            <div class="people-img text-center ml-0">
-							<img
-							class=""
-							src="img/person1.jpg"
-							alt=""
-              />
-              <p>Kelly Warnos</p>
-            </div>
-            <div class="people-img text-center">
-							<img
-							class=""
-							src="img/person1.jpg"
-							alt=""
-              />
-              <p>Holly Ringelberg</p>
-            </div>
-            <div class="people-img text-center">
-							<img
-							class=""
-							src="img/person1.jpg"
-							alt=""
-              />
-              <p>Kaleigh Respecki</p>
-            </div>
-          </div>
-          <div class="col col-lg-2 col-12 text-center">
-						<h4 class="margin-b-2">Officiant</h4>
-            <div class="people-img text-center ml-0">
-							<img
-							class=""
-							src="img/erin.png"
-							alt=""
-              />
-              <p>Erin DeFrancesco</p>
-            </div>
-          </div>
-          <div class="col col-lg-5 col-12 text-center">
-						<h4 class="margin-b-2">Groomsmen</h4>
-            <div class="people-img text-center ml-0">
-							<img
-							class=""
-							src="img/person2.jpg"
-							alt=""
-              />
-              <p>Alex Butler</p>
-            </div>
-            <div class="people-img text-center">
-							<img
-							class=""
-							src="img/person2.jpg"
-							alt=""
-              />
-              <p>Alex Woodle</p>
-            </div>
-            <div class="people-img text-center">
-              <img
-							class=""
-							src="img/person2.jpg"
-							alt=""
-              />
-              <p>Josh Wargo</p>
-            </div>
-          </div>
-        </div>
-      </div>
-		</div>
-    </section>
-    <!-- People Section End -->
     <!-- Section Gift -->
     <section id="registry" class="gifts section text-center">
 			<div class="container">
@@ -432,12 +351,6 @@
             </form> -->
           </div>
         </div>
-      </div>
-    </section>
-      <!-- Section Poll -->
-    <section id="poll" class="section text-center section--blue">
-			<div class="container">
-				<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf2lESm1OcIHE-oe6gAIoOJxBDEe8Ibqj_h_Xro3yiU55EYmQ/viewform?embedded=true" width="100%" height="680px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
     </section>
     <!-- Footer -->
