--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
       </div>
     </section>
     <!-- RSVP -->
-    <section id="rsvp" class="rsvp section">
+    <section id="rsvp" class="rsvp section section--blue">
       <div class="container">
         <div class="row">
           <div class="d-none d-md-block col-sm-12 col-md-4">
